--- a/ai-service/src/main/resources/application.properties
+++ b/ai-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ai-service
+server.port=7777
+
+spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:8787}
+spring.cloud.config.enabled=true
