--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -3,11 +3,12 @@ server.port=8787
 
 # Activation du Config Server
 
-spring.cloud.config.server.git.uri=file://///Users/pro/Desktop/project-spring/food-delivery/config-repo1
+spring.cloud.config.server.native.search-locations=file:///Users/pro/Desktop/project-spring/food-delivery/config-repo
+
 
 
 # Configuration Eureka Discovery Service
 eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
 
-
+spring.profiles.active=native
