--- a/delivery-service/pom.xml
+++ b/delivery-service/pom.xml
@@ -16,8 +16,8 @@
 	<description>Microservice for managing deliveries and orders</description>
 
 	<properties>
-		<java.version>23</java.version>
-		<spring-cloud.version>2023.0.0</spring-cloud.version>
+		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.3</spring-cloud.version>
 	</properties>
 
 	<dependencyManagement>
@@ -56,6 +56,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>  <!-- ADD VERSION HERE -->
+
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -89,6 +91,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.36</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -96,6 +99,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
